# fi-ainina

./: .env.example  .gitattributes  .gitignore  COMMANDS.md  DATABASE_SCHEMA.md  Makefile  README.md  REDIS_CONTRACTS.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
api/: __init__.py
companion-backend/: .env.example  Dockerfile  FRONTEND_HANDOFF.md  README.md  alembic.ini  docker-compose.yml  requirements.txt
companion-backend/alembic/: env.py
companion-backend/app/: config.py  crypto.py  database.py  enums.py  logging_utils.py  main.py  main_state.py  models.py  security.py
companion-backend/tests/: conftest.py  test_alerts_ws.py  test_auth.py  test_dashboard.py  test_reviews.py  test_users.py
docker/: Dockerfile.alerts  Dockerfile.api  Dockerfile.cv  Dockerfile.llm  Dockerfile.voice
frontend/: .env.example  .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
frontend/src/: App.jsx  index.css
infra/nginx/: nginx.conf
infra/postgres/: init.sql
infra/redis/: redis.conf
monitoring/: prometheus.yml
requirements/: api.txt  base.txt  cv.txt  devops.txt  llm.txt  voice.txt
services/alert_service/: .env.example  Dockerfile  IMPLEMENTATION_GUIDE.md  Makefile  README.md  pytest.ini  requirements.txt
services/alerts/: __init__.py
services/cv/: __init__.py
services/emotion_service/: .env.example  Dockerfile  camera_preview.py  requirements.txt
services/llm/: __init__.py
shared/: __init__.py  config.py  constants.py  logger.py
tests/: __init__.py
(+138 files in other folders)
