[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fi-ainina"
version = "0.1.0"
description = "AI Companion - Multimodal Safety System for Elderly Assistance"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/sarrabouslama/fi-ainina"
Repository = "https://github.com/sarrabouslama/fi-ainina.git"
